# AiLabGeneticAlgorithm

./: .gitignore  BaldwinEffectTesterBaldwinTest_Sat_Jun_06_13_17_50_2020.csv  BaldwinEffectTesterBaldwinTest_Sat_Jun_06_13_31_53_2020.csv  CMakeLists.txt  LabReportGraphs.xlsx  OX_Exchange.csv  Pmx_Exchange.csv  Pmx_Inversion.csv  README.md
baldwin_effect/include/: BaldwinEffectOutputFileWriter.h  BaldwinIterationStruct.h  baldwin_solver.h  baldwin_struct.h
baldwin_effect/src/: BaldwinEffectOutputFileWriter.cpp  baldwin_solver.cpp
bin_packing/include/: BinPackingGeneticSolver.h  BinPackingGeneticStruct.h  BinPackingInputReader.h  binPackingGeneticStruct.h
bin_packing/src/: BinPackingGeneticSolver.cpp  BinPackingInputReader.cpp
bin_packing/static_input_files/: Falkenauer_u20_00.txt  Falkenauer_u21_00.txt  Falkenauer_u22_00.txt  Falkenauer_u23_00.txt  Falkenauer_u25_00.txt  Falkenauer_u30_00.txt  Falkenauer_u31_00.txt  Falkenauer_u32_00.txt  Falkenauer_u33_00.txt  Falkenauer_u34_00.txt  Falkenauer_u35_00.txt  Falkenauer_u37_00.txt  Falkenauer_u40_00.txt
general_utilities/include/: OutputFileWriter.h  random_collection_generator.h
general_utilities/src/: OutputFileWriter.cpp
genetic_solver/include/: AbstractGeneticSolver.h  consts.h  (+8 more)
main/: main.cpp
nQueensResultsQue10/: MinimalConflicts.csv
output/: default_BullAndCow_NotAgingNotRws.csv  hello_BullAndCow_AgingNotRws.csv  hello_BullAndCow_AgingRws.csv  hello_BullAndCow_NotAgingNotRws.csv  hello_BullAndCow_NotAgingRws.csv
scripts/: regression.ps1  run_all_string_matching_perm.ps1  run_lab_part_a.ps1
(+1570 files in other folders)
